# ascension

./: .clang-format  .clang-tidy  .editorconfig  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  TODO  build.bat  clean.bat  run.bat
ascension/: CMakeLists.txt  notes.txt
ascension/assets/: assets.xml  assets.yml
ascension/assets/fonts/: fonts.xml
ascension/assets/shaders/: shaders.xml
ascension/assets/shaders/spritebatch/: spritebatch.frag  spritebatch.vert
ascension/assets/shaders/spritefont/: spritefont.frag  spritefont.vert
ascension/assets/textures/: textures.xml  textures.yml
ascension/include/ascension/: CMakeLists.txt  ascension.hpp
ascension/include/ascension/assets/: asset_manager.hpp  asset_types.hpp  serialize_assets.hpp  texture_handler.hpp
ascension/include/ascension/core/: application.hpp  log.hpp  types.hpp  window.hpp
ascension/include/ascension/debug/: instrumentor.hpp  logger.hpp
ascension/include/ascension/graphics/: buffer_object.hpp  frame_buffer.hpp  old.sprite_batch.hpp  renderer_2d.hpp  shader.hpp  shader_data_types.hpp  sprite_batch.hpp  sprite_font.hpp  texture_2d.hpp  texture_atlas.hpp  vertex_array_object.hpp
ascension/include/ascension/input/: input.hpp  input_listener.hpp  input_manager.hpp  input_state.hpp  input_types.hpp
ascension/include/ascension/platform/: platform.hpp  platform_types.hpp
ascension/libs/: CMakeLists.txt
ascension/src/: CMakeLists.txt  ascension.cpp  main.cpp
ascension/src/assets/: asset_manager.cpp  texture_handler.cpp
ascension/src/core/: application.cpp  window.cpp
ascension/src/debug/: instrumentor.cpp  logger.cpp
ascension/src/graphics/: buffer_object.cpp  frame_buffer.cpp  old.sprite_batch.cpp  renderer_2d.cpp  shader.cpp  sprite_batch.cpp  sprite_font.cpp  texture_2d.cpp  texture_atlas.cpp  vertex_array_object.cpp
ascension/src/input/: input.cpp  input_listener.cpp  input_manager.cpp  input_state.cpp
ascension/src/platform/: platform_win32.cpp
charlotte/: README.md
cmake/: _compiler_warnings.cmake  _standard_project_settings.cmake  helpers.cmake
dunois/: README.md  _cli.py  _helpers.py  build.py  clean.py  configure.py  dev.bat  dev.sh  help.py  install.py  run.py
erika/: CMakeLists.txt  README.md
erika/include/erika/core/: defines.hpp  engine.hpp  entry.hpp  game.hpp  types.hpp
erika/include/erika/plugins/: plugin_manager.hpp  plugin_types.hpp  renderer.hpp
erika/libs/: CMakeLists.txt
erika/plugins/: CMakeLists.txt
erika/plugins/base/: CMakeLists.txt
erika/plugins/base/include/erika/plugins/base/: plugin.hpp  plugin_manager_base.hpp  renderer.hpp
erika/plugins/base/src/: CMakeLists.txt  renderer.cpp
erika/plugins/renderer/: CMakeLists.txt
erika/plugins/renderer/d3d11/: CMakeLists.txt
erika/plugins/renderer/d3d11/include/erika/plugins/d3d11/: d3d11_main.hpp
erika/plugins/renderer/d3d11/include/erika/plugins/renderer/d3d11/: d3d11.hpp
erika/plugins/renderer/d3d11/src/: CMakeLists.txt  d3d11.cpp  d3d11_main.cpp
erika/plugins/renderer/opengl/: CMakeLists.txt
erika/plugins/renderer/opengl/include/erika/plugins/renderer/: types.hpp
erika/plugins/renderer/opengl/include/erika/plugins/renderer/opengl/: buffer_object.hpp  opengl.hpp  opengl_platform.hpp  opengl_platform_types.hpp  shader.hpp  sprite_batch.hpp  texture_2d.hpp  vertex_array_object.hpp
erika/plugins/renderer/opengl/libs/: CMakeLists.txt
erika/plugins/renderer/opengl/libs/glad/: CMakeLists.txt
erika/plugins/renderer/opengl/libs/glad/include/glad/: gl.h  glad.h  wgl.h
erika/plugins/renderer/opengl/libs/glad/src/: glad.c  wgl.c
erika/plugins/renderer/opengl/libs/raylib/: CMakeLists.txt
erika/plugins/renderer/opengl/libs/raylib/include/mraylib/: config.hpp  rlgl.hpp  rlmath.hpp  rlshapes.hpp  rltextures.hpp
erika/plugins/renderer/opengl/libs/raylib/include/raylib/: config.hpp  rlgl.hpp  rlmath.hpp  rlshapes.hpp  rltext.hpp  rltextures.hpp  rltypes.hpp  rlutils.hpp
erika/plugins/renderer/opengl/libs/raylib/libs/quiteok/: qo_image.hpp
erika/plugins/renderer/opengl/libs/raylib/libs/rl/: gputex.hpp
erika/plugins/renderer/opengl/libs/raylib/libs/stb/: stb_image.hpp  stb_image_resize.hpp  stb_image_write.hpp  stb_perlin.hpp  stb_rect_pack.hpp  stb_truetype.hpp
erika/plugins/renderer/opengl/libs/raylib/src/: rlgl.cpp  rlshapes.cpp  rltext.cpp  rltextures.cpp  rlutils.cpp
erika/plugins/renderer/opengl/src/: CMakeLists.txt  buffer_object.cpp  opengl.cpp  opengl_linux.cpp  opengl_win32.cpp  shader.cpp  sprite_batch.cpp  texture_2d.cpp  vertex_array_object.cpp
erika/src/: CMakeLists.txt  erika.cpp  sources.cmake
erika/src/core/: CMakeLists.txt  engine.cpp  game.cpp  sources.cmake
erika/src/plugins/: CMakeLists.txt  plugin_manager.cpp  plugin_types.cpp  renderer.cpp  sources.cmake
libs/: CMakeLists.txt
libs/magic_enum/: CMakeLists.txt
libs/stb/stb/: stb_image.h
qilian/: CMakeLists.txt  README.md
qilian/include/qilian/: qilian.hpp
qilian/src/: CMakeLists.txt  qilian.cpp  sources.cmake
scripts/: _cli.py  _globals.py  _helpers.py  _post_build.py  _types.py  build.bat  build.py  clean.bat  run.py  (+7 more)
yuki/: CMakeLists.txt  README.md
yuki/include/yuki/: CMakeLists.txt  types.hpp  yuki.hpp
yuki/include/yuki/debug/: instrumentor.hpp  logger.hpp
yuki/include/yuki/input/: input.hpp  input_types.hpp
yuki/include/yuki/platform/: platform.hpp  platform_types.hpp
yuki/libs/fmt/: CMakeLists.txt  ChangeLog.rst
yuki/libs/fmt/include/fmt/: args.h  chrono.h  color.h  compile.h  core.h  format-inl.h  format.h  os.h  ostream.h  printf.h  ranges.h  std.h  xchar.h
yuki/libs/fmt/src/: fmt.cc  format.cc  os.cc
yuki/libs/fmt/support/cmake/: cxx14.cmake
yuki/libs/magic_enum/: CMakeLists.txt
yuki/libs/magic_enum/include/magic_enum/: magic_enum.hpp
yuki/src/: CMakeLists.txt  sources.cmake  yuki.cpp
yuki/src/debug/: CMakeLists.txt  instrumentor.cpp  logger.cpp  sources.cmake
yuki/src/input/: CMakeLists.txt  input.cpp  sources.cmake
yuki/src/platform/: CMakeLists.txt  platform.cpp  platform_linux.cpp  platform_win32.cpp  sources.cmake
(+18 files in other folders)
